--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,17 @@
         android:theme="@style/Theme.I230504">
         <activity
             android:name=".MainActivity16"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity15"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity15"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".MainActivity14"
