--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.I230504">
         <activity
-            android:name=".MainActivity16"
+            android:name=".MainActivity18"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,13 +21,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity15"
+            android:name=".MainActivity17"
             android:exported="true">
 
         </activity>
         <activity
+            android:name=".MainActivity16"
+            android:exported="false"></activity>
+        <activity
+            android:name=".MainActivity15"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity14"
-            android:exported="true" />
+            android:exported="false" />
         <activity
             android:name=".MainActivity13"
             android:exported="false" />
@@ -54,7 +60,9 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity5"
-            android:exported="false" />
+            android:exported="true" >
+
+        </activity>
         <activity
             android:name=".MainActivity4"
             android:exported="false" />
@@ -66,7 +74,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
