--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.I230504">
         <activity
+            android:name=".MainActivity20"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity19"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity18"
-            android:exported="true" >
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity17"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity16"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".MainActivity15"
             android:exported="false" />
@@ -55,9 +58,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity5"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".MainActivity4"
             android:exported="false" />
@@ -69,7 +70,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
